--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         textarea { width: 100%; height: 120px; margin-top: 10px; }
         button { margin-top: 5px; padding: 5px 10px; }
         #preview { margin-top: 10px; padding: 10px; border: 1px dashed #aaa; background: #fafafa; white-space: pre-wrap; }
+        .inline { display: inline-block; margin-left: 10px; }
     </style>
 </head>
 <body>
@@ -23,11 +24,16 @@
 <canvas id="canvas" width="512" height="512"></canvas>
 
 <div class="controls">
-    <label>Grid Width (cells): <input type="number" id="gridWidth" value="1" step="1" min="1"></label>
+    <label>Grid Width (cells): <input type="number" id="gridWidth" value="1" step="1" min="1">
+        <span class="inline"><input type="checkbox" id="syncGrid"> Синхронизировать с Height</span>
+    </label>
     <label>Grid Height (cells): <input type="number" id="gridHeight" value="1" step="1" min="1"></label>
 
     <label>drawSize X: <input type="number" id="drawSizeX" value="1" step="0.1"></label>
-    <label>drawSize Y: <input type="number" id="drawSizeY" value="1" step="0.1"></label>
+    <label>drawSize Y: <input type="number" id="drawSizeY" value="1" step="0.1">
+        <span class="inline"><input type="checkbox" id="syncDrawSize"> Синхронизировать с X</span>
+    </label>
+
     <label>drawOffset X: <input type="number" id="drawOffsetX" value="0" step="0.1"></label>
     <label>drawOffset Z: <input type="number" id="drawOffsetZ" value="0" step="0.1"></label>
 </div>
@@ -44,6 +50,8 @@
     const xmlOutput = document.getElementById('xmlOutput');
     const exportButton = document.getElementById('exportButton');
     const preview = document.getElementById('preview');
+    const syncDrawCheckbox = document.getElementById('syncDrawSize');
+    const syncGridCheckbox = document.getElementById('syncGrid');
 
     let sprite = null;
     let texPath = "Things/Building/MyCustomSprite";
@@ -58,7 +66,39 @@
         reader.readAsDataURL(e.target.files[0]);
     });
 
-    const controls = ['gridWidth', 'gridHeight', 'drawSizeX', 'drawSizeY', 'drawOffsetX', 'drawOffsetZ'];
+    document.getElementById('drawSizeX').addEventListener('input', () => {
+        if (syncDrawCheckbox.checked) {
+            document.getElementById('drawSizeY').value = document.getElementById('drawSizeX').value;
+        }
+        draw();
+        updateXML();
+    });
+
+    document.getElementById('drawSizeY').addEventListener('input', () => {
+        if (syncDrawCheckbox.checked) {
+            document.getElementById('drawSizeX').value = document.getElementById('drawSizeY').value;
+        }
+        draw();
+        updateXML();
+    });
+
+    document.getElementById('gridWidth').addEventListener('input', () => {
+        if (syncGridCheckbox.checked) {
+            document.getElementById('gridHeight').value = document.getElementById('gridWidth').value;
+        }
+        draw();
+        updateXML();
+    });
+
+    document.getElementById('gridHeight').addEventListener('input', () => {
+        if (syncGridCheckbox.checked) {
+            document.getElementById('gridWidth').value = document.getElementById('gridHeight').value;
+        }
+        draw();
+        updateXML();
+    });
+
+    const controls = ['drawOffsetX', 'drawOffsetZ'];
     controls.forEach(id => document.getElementById(id).addEventListener('input', () => {
         draw();
         updateXML();
@@ -142,7 +182,6 @@
         alert('XML скопирован в буфер обмена!');
     });
 
-    // Initial draw and XML
     draw();
     updateXML();
 </script>
