--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <div style={{ display: 'flex', alignItems: 'center', gap: '1rem', marginBottom: '20px' }}>
                     <input id="spriteInput" type="file" accept="image/*" onChange={handleFileChange} style={{ display: 'none' }} />
                     <label htmlFor="spriteInput" style={{ cursor: 'pointer' }}>
-                        <span style={{ padding: '8px 14px', background: 'var(--accent)', color: 'white', borderRadius: '6px' }}>Выбрать изображение</span>
+                        <span style={{ padding: '8px 14px', background: 'var(--accent)', color: 'white', borderRadius: '6px' }}>Выбрать спрайт</span>
                     </label>
                     <span style={{ fontStyle: 'italic' }}>{localStorage.getItem('lastImage') ? 'Загружен сохранённый спрайт' : ''}</span>
                 </div>
