fixed header again

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
         return (
             <div>
-                <h1 style={{ marginBottom: '1rem' }}>RimWorld GraphicData Tool (React)</h1>
+                <h1 style={{ marginBottom: '1rem' }}>RimWorld GraphicData Tool</h1>
 
                 <div style={{ display: 'flex', alignItems: 'center', gap: '1rem', marginBottom: '20px' }}>
                     <input id="spriteInput" type="file" accept="image/*" onChange={handleFileChange} style={{ display: 'none' }} />
